--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
+    "deploy": "npm run build && firebase deploy",
+    "deploy:prod": "npm run build --no-check && firebase deploy --only hosting",
     "astro": "astro"
   },
   "dependencies": {
