--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "public": "dist",
     "ignore": [
       "firebase.json",
-      "**/.*",
+      "**/.git/**",
       "**/node_modules/**"
     ],
     "rewrites": [
@@ -14,20 +14,20 @@
     ],
     "headers": [
       {
-        "source": "**/*.@(js|css)",
+        "source": "**/*.@(js|css|svg|png|jpg|jpeg|webp|ico|woff|woff2)",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=31536000"
+            "value": "public,max-age=31536000,immutable"
           }
         ]
       },
       {
-        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp)",
+        "source": "**/*.@(html|json|xml)",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=31536000"
+            "value": "public,max-age=3600,must-revalidate"
           }
         ]
       },
@@ -45,6 +45,10 @@
           {
             "key": "X-XSS-Protection",
             "value": "1; mode=block"
+          },
+          {
+            "key": "Referrer-Policy",
+            "value": "strict-origin-when-cross-origin"
           }
         ]
       }
